refactor: relate file with application