@@ -2,38 +2,58 @@ package com.jake.loan.service;
 
 import com.jake.loan.exception.BaseException;
 import com.jake.loan.exception.ResultType;
+import com.jake.loan.repository.ApplicationRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.stereotype.Service;
+import org.springframework.util.FileSystemUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.util.Objects;
 import java.util.stream.Stream;
 
 @RequiredArgsConstructor
 @Service
 public class FileStorageServiceImpl implements FileStorageService {
+    private final ApplicationRepository applicationRepository;
+
     @Value("${spring.servlet.multipart.location}")
     private String uploadPath;
 
     @Override
-    public void save(MultipartFile file) {
+    public void save(Long applicationId, MultipartFile file) {
+        if(!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
         try {
-            Files.copy(file.getInputStream(), Paths.get(uploadPath).resolve(file.getOriginalFilename()), StandardCopyOption.REPLACE_EXISTING);
+            // ../dir/1/*.txt
+            // ../dir/2/*.txt
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            Path directoryPath = Path.of(applicationPath);
+            if(!Files.exists(directoryPath)) {
+                Files.createDirectory(directoryPath);
+            }
+            Files.copy(file.getInputStream(), directoryPath.resolve(file.getOriginalFilename()), StandardCopyOption.REPLACE_EXISTING);
         } catch (Exception e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
     }
 
     @Override
-    public Resource load(String fileName) {
+    public Resource load(Long applicationId, String fileName) {
+        if(!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
         try {
-            Path file = Paths.get(uploadPath).resolve(fileName);
+            String applicationPath = uploadPath.concat("/" + applicationId);
+
+            Path file = Paths.get(applicationPath).resolve(fileName);
             Resource resource = new UrlResource(file.toUri());
 
             if (resource.isReadable() || resource.exists()) {
@@ -47,11 +67,28 @@ public class FileStorageServiceImpl implements FileStorageService {
     }
 
     @Override
-    public Stream<Path> loadAll() {
+    public Stream<Path> loadAll(Long applicationId) {
+        if(!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
         try {
-            return Files.walk(Paths.get(uploadPath), 1).filter(path -> !path.equals(Paths.get(uploadPath)));
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            return Files.walk(Paths.get(applicationPath), 1).filter(path -> !path.equals(Paths.get(applicationPath)));
         } catch (Exception e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
+    }
+
+    @Override
+    public void deleteAll(Long applicationId) {
+        if(!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+        String applicationPath = uploadPath.concat("/" + applicationId);
+        FileSystemUtils.deleteRecursively(Paths.get(applicationPath).toFile());
+    }
+
+    private boolean isPresentApplication(Long applicationId) {
+        return applicationRepository.findById(applicationId).isPresent();
     }
 }
